--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,8 +144,6 @@ section {
     font-size: 16px;
 }
 
-.intro {
-    text-align: center;
 }
 
 .intro p {
@@ -154,11 +152,10 @@ section {
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
-
+    text-align: center;
 }
 
 .steps {
-    text-align: center;
     background: #fce138;
 }
 
@@ -189,10 +186,11 @@ section {
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
     border-bottom:  3px solid;
-    display: inline-block;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 
 .primary-border {
@@ -203,9 +201,6 @@ section {
     border-color: #39a6b2;
 }
 
-.trainers {
-    text-align: center;
-}
 
 .trainer {
     width: 900px;
@@ -250,8 +245,11 @@ section {
     text-align: right;
 }
 
+.flex-row {
+    display: flex;
+}
+
 .contact {
-    text-align: center;
     background-color: #024e76;
 }
 
